change swap file name to .<filename>.kate-swp

BUG: 269518